# FastAPIestatein

./: .gitignore  pyproject.toml  readme.txt  requirements.txt
config/database/: db_settings.py
src/: main.py  routes.py  session.py  settings.py
src/config/database/: db_settings.py
src/models/: base_model.py  house_form_model.py  house_model.py  product_prices_model.py  question_form_model.py  review_model.py
src/repositories/: abstract_repository.py  base_repository.py  house_form_repository.py  house_repository.py  product_prices_repository.py  question_form_repository.py  review_repository.py
src/schemas/: base_schema.py  house_form_schema.py  house_schema.py  product_prices_schema.py  question_form_schema.py  review_schema.py
src/services/: base_service.py  house_form_service.py  house_service.py  question_form_service.py  review_service.py
