[tool.poetry]
name = "fastapiproduct"
version = "0.1.0"
description = ""
authors = ["HoverGo <kotikarbuz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
uvicorn = "^0.30.3"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
